# r2pythonds

./: .gitignore  pyproject.toml  readme
ANOVA/: ANOVA.py
ANOVA/input/: ANOVA_results.csv  Wilcoxon_results.csv  merged_Imputed_output.csv
ANOVA/output/: ANOVA_check_20260614_185801.csv  Wilcoxon_check_20260614_185801.csv  combined_all_long.csv  significant_targets_long.csv
DataCleaning/: __init__.py  cleaning.py
DataCleaning/input/: highPH.xlsx  lowPH.xlsx
DataProcessor/: ProcessorClass.py
ECHODataCleaning/: ECHOCleaning.py
ECHODataCleaning/input/: CE_DG_68.csv  PC_LPC_68.csv  PE_LPE_65.csv  PI_PG_PS_65.csv  TG_65.csv  samplename.csv
ECHODataCleaning/output/: CEDG_mz.csv  PCLPC_mz.csv  PELPE_mz.csv  PIPGPS_mz.csv  SM_mz.csv
Helpers/: __init__.py  df_functions.py  imputation_functions.py
PCA/: PCA.py
PCA/output/: PCA_summary_output.csv
PlottingFunction/input/: 01_preprocess.R  df_final.csv
Preprocessing/: imputation.py
Preprocessing/input/: R_imputed.csv  merged_DataCleaning_output.csv  sample.csv  sample_info.csv
Schema/: __init__.py  sample_schema.py
reference/: ANOVA.txt  ANOVA_results.csv  PCA.txt  Wilcoxon_results.csv  imputation.txt
replicate_excel/: final_clean_for_echo.py  function_IS.py  replicate.py
replicate_excel/input/: PELPE_65.csv  SM_64.csv
